# TrainAndTest

./: CMakeLists.txt  Example_main.c  SolutionListOperations.c  TrainAndTest.c  TrainAndTest.h
